fix tooltips on iOS

--- a/frontend/styles/components/shared/help-tooltip.scss
+++ b/frontend/styles/components/shared/help-tooltip.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.tooltip-ios-touch {
+  cursor: pointer !important;
+}
+
 .tooltip-react.recolor-by {
   position: absolute;
   top: 34px;
